# Xdm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dwm/: config.def.h  dwm.c  hardinfo.c
st/: config.def.h  x.c
